# aoc23

./: aoc23.cabal
days/: day01.hs
