cabal-version:      2.4
name:               aoc23
version:            0.1.0.0
author:             Stian Sørby
maintainer:         51554341+ssouthcity@users.noreply.github.com
extra-source-files: CHANGELOG.md

executable day01
  build-depends:    base
  hs-source-dirs:   days
  default-language: Haskell2010
  main-is: day01.hs
